# file-transfer

./: .gitignore  CMakeLists.txt  README.md  setup.py
cpp/include/client/: aws_client.h  minio_client.h
cpp/include/common/: config.h
cpp/include/interface/: base_client.h
cpp/src/client/: aws_client.cc  minio_client.cc
example/: example_cpp_minio.cc  example_minio.py
python/ftrans/client/: __init__.py  base.py  minio_client.py
